// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NotificationBadge tone: action renders correctly 1`] = `
<div>
  <span
    class="css-frq8v8-boxStyles-NotificationBadge"
  >
    5
  </span>
</div>
`;

exports[`NotificationBadge tone: neutral renders correctly 1`] = `
<div>
  <span
    class="css-1sgud3r-boxStyles-NotificationBadge"
  >
    5
  </span>
</div>
`;
